--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="about" class="container">
         <h2>Professional Summary</h2>
-        <p>Results-driven <strong>Senior Software Developer</strong> in Test with 15+ years of experience in <strong>test automation, CI/CD optimization, and engineering productivity</strong> enhancement. Expertise in building scalable automation frameworks, reducing build times, and enhancing software reliability. Proven ability to lead cross-functional, globally distributed teams to drive innovation, improve code quality, and optimize cloud infrastructure. Passionate about game development, accessibility testing, and continuous delivery pipelines, making PlayStation the perfect place to apply my expertise.</p>
+        <p>Results-driven <strong>Senior Software Developer</strong> in Test with 15+ years of experience in <strong>test automation, CI/CD optimization, and engineering productivity</strong> enhancement. Expertise in building scalable automation frameworks, reducing build times, and enhancing software reliability. Proven ability to lead cross-functional, globally distributed teams to drive innovation, improve code quality, and optimize cloud infrastructure.</p>
     </section>
 
     <section id="skills" class="container">
