--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     <section id="articles" class="container">
         <h2>Published Articles</h2>
         <ul>
-            <li><a href="https://www.ijmra.us/project%20doc/2025/IJME_FEBRUARY2025/IJMIE4Feb25.pdf">Strategic Cost Management for Cloud-Native Software Development</a></li>
-            <li><a href="#">Predictive Metrics: Transforming Engineering Productivity and Software Quality</a></li>
+            <li><a href="https://www.ijmra.us/project%20doc/2025/IJME_FEBRUARY2025/IJMIE4Feb25.pdf" target="_blank" rel="noopener noreferrer">Strategic Cost Management for Cloud-Native Software Development</a></li>
+            <li><a href="https://www.ijcttjournal.org/2025/Volume-73%20Issue-1/IJCTT-V73I1P106.pdf" target="_blank" rel="noopener noreferrer">Predictive Metrics: Transforming Engineering Productivity and Software Quality</a></li>
             <li><a href="#">Leveraging Machine Learning for Advanced Automation Testing</a></li>
         </ul>
     </section>
