--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <li><a href="https://www.ijmra.us/project%20doc/2025/IJME_FEBRUARY2025/IJMIE4Feb25.pdf" target="_blank" rel="noopener noreferrer">Strategic Cost Management for Cloud-Native Software Development</a></li>
             <li><a href="https://www.ijcttjournal.org/2025/Volume-73%20Issue-1/IJCTT-V73I1P106.pdf" target="_blank" rel="noopener noreferrer">Predictive Metrics: Transforming Engineering Productivity and Software Quality</a></li>
             <li><a href="https://www.ijcttjournal.org/2025/Volume-73%20Issue-2/IJCTT-V73I2P107.pdf" target="_blank" rel="noopener noreferrer">Leveraging Machine Learning for Advanced Automation Testing</a></li>
+            <li><a href="https://www.ijmra.us/project%20doc/2025/IJME_APRIL2025/IJMIE3April25.pdf" target="_blank" rel="noopener noreferrer">Comprehensive Observability and Monitoring Strategies Using Datadog</a></li>
         </ul>
     </section>
 
