--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
     </section>
 
     <section id="articles" class="container">
-        <h2>Published Articles</h2>
+        <h2>Publications</h2>
         <ul>
+            <li><a href="https://thenewstack.io/mastering-the-cloud-saumen-biswas-on-cutting-costs-without-cutting-corners" target="_blank" rel="noopener noreferrer">Mastering the Cloud: Saumen Biswas on Cutting Costs Without Cutting Corners</a></li>
+            <li><a href="https://www.siliconindia.com/news/general/transforming-engineering-through-predictive-metrics-a-visionary-framework-by-saumen-biswas-nid-235104-cid-1.html" target="_blank" rel="noopener noreferrer">Transforming Engineering Through Predictive Metrics: A Visionary Framework by Saumen Biswas</a></li>
             <li><a href="https://www.ijmra.us/project%20doc/2025/IJME_FEBRUARY2025/IJMIE4Feb25.pdf" target="_blank" rel="noopener noreferrer">Strategic Cost Management for Cloud-Native Software Development</a></li>
             <li><a href="https://www.ijcttjournal.org/2025/Volume-73%20Issue-1/IJCTT-V73I1P106.pdf" target="_blank" rel="noopener noreferrer">Predictive Metrics: Transforming Engineering Productivity and Software Quality</a></li>
             <li><a href="https://www.ijcttjournal.org/2025/Volume-73%20Issue-2/IJCTT-V73I2P107.pdf" target="_blank" rel="noopener noreferrer">Leveraging Machine Learning for Advanced Automation Testing</a></li>
